kube/cashaddress-deployment.yml
apiVersion:  apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: cashaddress
  name: cashaddress
spec:
  replicas: 2
  selector:
    matchLabels:
      service: cashaddress
  template:
    metadata:
      labels:
        service: cashaddress
    spec:
      containers:
      - image: zquestz/cashaddress
        name: cashaddress
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
      restartPolicy: Always
