kube/cashaddress-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: cashaddress
  namespace: default
spec:
  ports:
    - port: 88
      targetPort: 80
  selector:
    service: cashaddress
  type: NodePort
