kube/cashaddress-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cashaddress-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - cashaddress.org
    - www.cashaddress.org
    secretName: cashaddress-tls
  backend:
    serviceName: cashaddress
    servicePort: 88
  rules:
  - host: cashaddress.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cashaddress
          servicePort: 88
  - host: www.cashaddress.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cashaddress
          servicePort: 88
